# accounting-rs

./: Cargo.toml
src/: cli.rs  main.rs  models.rs  validators.rs
src/handlers/: account.rs  balance.rs  expense.rs  mod.rs  person.rs
