[package]
name = "accounting-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.11", features = ["derive"] }
log = "0.4.22"
anyhow = "1.0.86"
serde_json = "1.0.120"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
comfy-table = "7.1.1"
